Fix readability on index page

--- a/public/main.css
+++ b/public/main.css
@@ -14,3 +14,11 @@ nav {
 label#logout-username {
   padding-right: 20px;
 }
+
+strong.shortUrl {
+  margin-right: 30px;
+}
+
+ul.list-group {
+  margin-top: 10px;
+}
